# bazel-ios-template

./: .gitignore  .swiftlint.yml  BUILD.bazel  MODULE.bazel  Makefile  Package.swift  Pods.WORKSPACE  WORKSPACE  swift_deps_index.json
app/: App.swift  BUILD
app/Sources/: ApplicationDelegate.swift
