bazel_dep(
  name = "rules_apple",
  version = "3.0.0",
  repo_name = "build_bazel_rules_apple"
)

bazel_dep(
  name = "rules_swift",
  version = "1.12.0",
  # PodToBUILD expects this repo_name
  repo_name = "build_bazel_rules_swift"
)

bazel_dep(
  name = "rules_xcodeproj",
  version = "1.11.0",
  dev_dependency = True
)
