bazel_dep(
    name = "rules_apple",
    version = "3.3.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "rules_swift",
    version = "1.16.0",
    # PodToBUILD expects this repo_name
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_xcodeproj",
    version = "1.16.0",
    dev_dependency = True,
)

bazel_dep(
    name = "swiftlint",
    version = "0.54.0",
    repo_name = "SwiftLint",
)

bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.18.1",
)

bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.28.0",
)

bazel_dep(
    name = "gazelle",
    version = "0.35.0",
)

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.5.0",
    dev_dependency = True,
)

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//:swift_deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_swift_composable_architecture",
)
# swift_deps END
